# ir-canonical

./: .gitignore  CHANGELOG.md  README.md  build_name_map.py  compile_cli.py  compile_map.py  hatch_build.py  pyproject.toml  release-please-config.json  seed.py
.github/workflows/: ci.yaml  publish.yaml  release-please.yaml
controls/Digit_6/: aliases.json
controls/Down/: aliases.json
controls/Exit/: aliases.json
controls/Guide/: aliases.json
controls/Home/: aliases.json
controls/Left/: aliases.json
controls/Menu/: aliases.json
controls/Next/: aliases.json
controls/Power_On/: aliases.json
controls/Power_Toggle/: aliases.json
controls/Previous/: aliases.json
controls/Right/: aliases.json
controls/Select/: aliases.json
controls/Stop/: aliases.json
controls/Up/: aliases.json
controls/Volume_Up/: aliases.json
data/: canonical_controls.yaml  flipper_name_map.json  unmapped_names.txt
src/ir_canonical/: __init__.py  compile.py  normalize.py
src/ir_canonical/controls/App_Apple_Tv/: aliases.json
src/ir_canonical/controls/App_Disney_Plus/: aliases.json
src/ir_canonical/controls/App_Hbo_Max/: aliases.json
src/ir_canonical/controls/App_Hulu/: aliases.json
src/ir_canonical/controls/App_Netflix/: aliases.json
src/ir_canonical/controls/App_Paramount_Plus/: aliases.json
src/ir_canonical/controls/App_Peacock/: aliases.json
src/ir_canonical/controls/App_Plex/: aliases.json
src/ir_canonical/controls/App_Prime_Video/: aliases.json
src/ir_canonical/controls/App_Spotify/: aliases.json
tests/: test_resolve.py
(+53 files in other folders)
