[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeops-ir-canonical"
version = "0.1.0"                      # managed by release-please
description = "Canonical media-control vocabulary + Flipper-IRDB name→canonical mapping."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "HomeOps" }]
keywords = ["infrared", "ir", "flipper", "flipper-irdb", "home-assistant", "esphome", "remote"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Home Automation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HomeOps/ir-canonical"
Issues = "https://github.com/HomeOps/ir-canonical/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_canonical"]

# control_map.json is generated (git-ignored) and force-included by the build
# hook; the controls/ tree under the package is shipped as package data.
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
